# ckks-rust

./: Cargo.toml
algebra/src/: ntt.rs  utils.rs
ckks-prover/program/: Cargo.toml
ckks-prover/program/elf/: riscv32im-succinct-zkvm-elf
ckks-prover/program/src/: main.rs
ckks-prover/script/: Cargo.toml
ckks-prover/script/src/: main.rs
rlwe/src/: encoder.rs
tfhe-test/: Cargo.toml
tfhe-test/src/: lib.rs
tfhe-test/src/example/: run.rs
