[workspace]
[package]
version = "0.1.0"
name = "ckks-prover-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
polyr = { path = "../../polyr/" }
algebra = { path = "../../algebra" }
rlwe = { path = "../../rlwe" }
tfhe-test = { path = "../../tfhe-test" }
arrayvec = "0.7.1"
approx = "0.5.0"
num-bigint = "0.4.2"
num-rational = "0.4.0"
num-traits = "0.2.14" 
num-complex = "0.4.0"
